feat: mejoras en UI, mapa y organización de estilos

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Baches Rosario - Reporte de Baches</title>
+    <title>Baches en la ciudad de Rosario, Santa Fe, Argentina - Reporte de Baches</title>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   </head>
   <body>
